# starq

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Dockerfile  pyproject.toml
api/starq/: auth.py  cli.py  config.py  main.py  models.py  redis_client.py
api/starq/routers/: jobs.py  queues.py
web/: Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/[slug]/: page.tsx
web/src/app/queues/: page.tsx
web/src/app/queues/[slug]/: page.tsx
web/src/components/: api-key-input.tsx  constellation-bg.tsx  create-queue-dialog.tsx  job-table.tsx  live-counter.tsx  nav.tsx  queue-card.tsx  submit-job-dialog.tsx  worker-pulse.tsx
web/src/lib/: api.ts  types.ts  use-polling.ts
